# ollama-coder

./: CHANGES_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  STREAMING_FEATURE.md  STREAMING_IMPLEMENTATION.md
scripts/: build.sh
src/ollama_coder/: __init__.py  __main__.py  cli.py
src/ollama_coder/config/: __init__.py  settings.py
src/ollama_coder/core/: __init__.py  agent.py  context_builder.py  system_prompt.py
src/ollama_coder/exceptions/: __init__.py
src/ollama_coder/memory/: __init__.py  extractor.py  store.py
src/ollama_coder/tools/: __init__.py  base.py  bash_tool.py  file_tool.py  registry.py
src/ollama_coder/ui/: __init__.py  completer.py  renderer.py  styles.py
src/ollama_coder/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_config_settings.py  test_core.py  test_memory.py  test_tools.py  test_ui.py
