[project]
name = "ollama-coder"
version = "0.1.0"
description = "A CLI chat application using Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "langchain-ollama>=0.1.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
ollama-coder = "ollama_coder.cli:main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
